# onelog

./: .gitignore  Makefile  README.md
.claude/rules/: host-sync-policy.md  onemcp-mirror-policy.md
agent/: Dockerfile  README.md  pyproject.toml
agent/src/agent/: __init__.py  agent_loop.py  alert_dedupe.py  alert_formatter.py  auth_stub.py  config.py  embed_client.py  llm_client.py  logging_setup.py  main.py  redact.py  system_prompt.py  telegram_client.py
agent/src/agent/routes/: alert.py  chat.py
agent/src/agent/tools/: __init__.py  query_victorialogs.py  registry.py  search_log_templates.py
agent/src/onelog_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agent/tests/: conftest.py  test_agent_loop.py  test_alert_dedupe.py  test_alert_formatter.py  test_llm_client.py  test_redact.py
docs/: cost-dashboard.md  deployment-backup-offsite.md  deployment-client.md  deployment-fleet.md  deployment-guide.md  deployment-llm-abstraction.md  deployment-migrate.md  deployment-mtls.md  deployment-self-monitoring.md  development-roadmap.md  ha-roadmap.md  llm-provider-ops.md  mcp-setup-guide.md  onelog-team-project-guide.md  onemcp-perf-runbook.md  openwebui-user-guide.md  ops-cheatsheet.md  poc-deployment-guide.md  project-changelog.md  system-architecture.md
docs/journals/: 2026-06-23-mcp-only-pivot.md  2026-06-24-mcp-phase01-smoke-pass.md  2026-06-25-rsyslog-json-ingest-shipped.md  2026-07-09-cost-dashboard-grafana-shipped.md  2026-07-10-prod-readiness-rotation-shipped.md  2026-07-13-vmalert-phase1a-deployed.md  2026-07-16-kb-phase1-openwebui-pivot-shipped.md  2026-07-16-kb-phase1-shipped.md
indexer/: Dockerfile  README.md  pyproject.toml
indexer/src/indexer/: __init__.py  config.py  drain_cluster.py  embed_client.py  logging_setup.py  main.py  metrics.py  nats_consumer.py  qdrant_writer.py  redact.py
indexer/tests/: test_drain_cluster.py  test_qdrant_writer.py  test_redact.py
infra/: .env.example  docker-compose.override.yml.example  docker-compose.yml
infra/alertmanager/: alertmanager.yml
infra/ansible/: ansible.cfg  deploy-clients.yml  inventory.example.ini
infra/backup/: README.md  backup-age.pub
infra/caddy/: Caddyfile
infra/clients/: README.md  mock-logs.py  mock-logs.service  rsyslog-forward-json.conf  rsyslog-forward.conf
infra/grafana/: grafana.ini
infra/litellm/: .env.cost.example  .env.llm.example  config.yaml  init-schema.sql
infra/mcpo/: config.template.json
infra/openwebui/: README.md  mcp-config.json  onemcp-ca.crt  probe-onemcp-perf.sh  system-prompt-ops.md
mcp-semantic/: Dockerfile  README.md  pyproject.toml
mcp-semantic/src/mcp_semantic/: __init__.py  audit.py  auth.py  config.py  embed.py  main.py  vmui.py
mockups/: admin-audit.html  admin-cost.html  admin-health.html  chat.html  index.html  onelog-client-deploy-config.html  onelog-cost-dashboard.html  onelog-index.html  onelog-llm-abstraction-workflow.html  onelog-monitoring-guide.html  onelog-onemcp-bridge-workflow.html  onelog-presentation.html  onelog-production-deploy.html  onelog-services-detail.html  onelog-system-explainer.html  onelog-vmui-queries.html  onemcp-portal-v1-5-mockup.html  settings.html  trace.html
web/: .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+242 files in other folders)
