[project]
name = "onelog-indexer"
version = "0.1.0"
description = "Consume WARN+ logs from NATS, Drain3 cluster, embed → Qdrant"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.7.0",
    "drain3>=0.9.11",
    "qdrant-client>=1.10.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "tenacity>=8.5.0",
    "prometheus-client>=0.20.0",
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
onelog-indexer = "indexer.main:run"
onelog-init-qdrant = "indexer.qdrant_writer:run_init"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
